--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	// compile 'com.google.code.findbugs:jsr305:2.0.2'
 	compile gradleApi()
 	compile 'org.anarres:jcpp:1.4.2'
+	compile 'commons-io:commons-io:2.4'
 
 	testCompile 'junit:junit:4.8.1'
 }
