--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,24 @@
-// Establish version and status
-ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name
-group = "org.anarres.gradle"
-
 buildscript {
-    repositories {
-        // mavenLocal()
-        mavenCentral() // maven { url 'http://jcenter.bintray.com' }
-    }
     apply from: file('gradle/buildscript.gradle'), to: buildscript 
 }
 
-allprojects {
-    repositories { 
-        // mavenLocal()
-        mavenCentral() // maven { url: 'http://jcenter.bintray.com' }
-    }
+plugins {
+	id 'nu.studer.plugindev' version '1.0.3'
 }
 
+ext.githubProjectName = rootProject.name
+group = "org.anarres.gradle"
+
 apply from: file('gradle/convention.gradle')
-apply from: file('gradle/maven.gradle')
+apply from: file('gradle/github.gradle')
+apply from: file('gradle/plugin.gradle')
 apply from: file('gradle/check.gradle')
 apply from: file('gradle/license.gradle')
-// apply from: file('gradle/release.gradle')
-
-apply plugin: 'groovy'
 
 dependencies {
-	// compile 'com.google.code.findbugs:jsr305:2.0.2'
 	compile gradleApi()
-	compile 'org.anarres:jcpp:1.4.2'
+	compile 'org.anarres:jcpp:1.4.7'
 	compile 'commons-io:commons-io:2.4'
-
-	testCompile 'junit:junit:4.8.1'
 }
 
 javadoc {
