--- a/gradle/check.gradle
+++ b/gradle/check.gradle
@@ -1,4 +1,3 @@
-subprojects {
 	// Checkstyle
 	// apply plugin: 'checkstyle'
 	// checkstyle {
@@ -28,4 +27,11 @@ subprojects {
 			}
 		}
 	}
-}
+
+	apply plugin: "be.insaneprogramming.gradle.animalsniffer"
+	animalsniffer {
+		signature = "org.codehaus.mojo.signature:java16:+@signature"
+		// ignores = ["my.package.name"]
+		// annotations = [] // supported annotations to signal Animal Sniffer to ignore annotated elements
+		skip = true
+	}
