--- a/gradle/convention.gradle
+++ b/gradle/convention.gradle
@@ -1,9 +1,9 @@
-
 	apply plugin: 'java' // Plugin as major conventions
 	// apply plugin: 'errorprone'
 	apply plugin: 'info'
+	apply plugin: 'com.github.ben-manes.versions'
 
-	sourceCompatibility = 1.5
+	sourceCompatibility = 1.6
 
 	// GRADLE-2087 workaround, perform after java plugin
 	status = project.hasProperty('preferredStatus')?project.preferredStatus:(version.contains('SNAPSHOT')?'snapshot':'release')
@@ -16,11 +16,11 @@
 
 	dependencies {
 		compile 'com.google.code.findbugs:jsr305:2.0.2'
-		compile 'org.slf4j:slf4j-api:1.7.7'
+		// compile 'org.slf4j:slf4j-api:1.7.12'
 
-		testCompile 'junit:junit:4.11'
+		testCompile 'junit:junit:4.12'
 
-		testRuntime 'org.slf4j:slf4j-simple:1.7.7'
+		testRuntime 'ch.qos.logback:logback-classic:1.1.3'
 	}
 
 	tasks.withType(JavaCompile) {
@@ -28,9 +28,15 @@
 	}
 
 	javadoc {
-		options.links "http://docs.oracle.com/javase/7/docs/api/",
-			"http://docs.oracle.com/javaee/7/api/",
-			"http://docs.guava-libraries.googlecode.com/git/javadoc/"
+		if (!gradle.startParameter.offline)
+			options.links "http://docs.oracle.com/javase/7/docs/api/",
+				"http://docs.oracle.com/javaee/7/api/",
+				"http://docs.guava-libraries.googlecode.com/git/javadoc/",
+				"http://www.gradle.org/docs/current/javadoc/",
+				"http://groovy.codehaus.org/api/"
+
+		if (JavaVersion.current().isJava8Compatible())
+			options.addStringOption('Xdoclint:none', '-quiet')
 	}
 
 	test {
@@ -61,6 +67,7 @@
 
 apply plugin: 'build-announcements'
 apply plugin: 'build-dashboard'
+apply plugin: 'project-report'
 
 // Generate wrapper, which is distributed as part of source to alleviate the need of installing gradle
 wrapper {
