--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
 	repositories {
-		mavenLocal()
+		// mavenLocal()
 		mavenCentral()
-		jcenter()
+		// jcenter()
 		// maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+		gradlePluginPortal()
 	}
 
 	dependencies {
-		classpath 'org.anarres.gradle:gradle-stdproject-plugin:1.0.8'
+		classpath 'org.anarres.gradle:gradle-stdproject-plugin:1.0.10'
 	}
 }
 
@@ -31,8 +32,4 @@ dependencies {
 	compile gradleApi()
 	compile 'org.anarres:jcpp:1.4.7'
 	compile 'commons-io:commons-io:2.4'
-}
-
-animalsniffer {
-	skip = true
 }
